# segmentation-fold

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  README.md
benchmarks/: pairing.cpp
doc/: Doxyfile.in
doc/md/: AUTHORS.md  CONTRIBUTING.md  INSTALL.md  INTRODUCTION.md  USAGE.md
docs/: Doxyfile  conf.py  index.rst
docs/classes/: DotBracket.rst  GibbsFreeEnergy.rst  Pairing.rst  PairingPlus.rst  ReadData.rst  ReadSegments.rst  ScoringMatrix.rst  gibbs_free_energy.rst  pairing_plus.rst
include/: Direction.hpp  DotBracket.hpp  GibbsFreeEnergy.hpp  Nucleotide.hpp  Pair.hpp  Pairing.hpp  PairingPlus.hpp  PairingType.hpp  Position.hpp  ReadData.hpp  ReadSegments.hpp  Region.hpp  ScoringMatrix.hpp  ScoringTree.hpp  ScoringTreeElement.hpp  Segment.hpp  SegmentLoop.hpp  SegmentLoopTree.hpp  SegmentTraceback.hpp  SegmentTree.hpp  SegmentTreeElement.hpp  Sequence.hpp  Settings.hpp  SubSequence.hpp  Zuker.hpp  ZukerTraceback.hpp  config.hpp  config.hpp.in  main.hpp
include/Utils/: utils.hpp
scripts/energy-estimation-utility/: .gitignore  ChangeLog  README.md  running.txt  setup.py
scripts/energy-estimation-utility/energy_estimation_utility/: BinarySplit.py  CLI.py  DataController.py  FastaFile.py  FoldController.py  RNA.py  __init__.py
scripts/energy-estimation-utility/segmentation_fold_utils/: BinarySplit.py  CLI.py  DBNFile.py  DataController.py  ExtractBoxedSequences.py  FastaFile.py  FindBoxes.py  FindCDboxes.py  FoldController.py  GeneAnnotation.py  RNA.py  ScanCDboxKTurns.py  XMLFile.py  __init__.py
scripts/energy-estimation-utility/tests/: test_DBNFile.py  test_ExtractBoxedSequence.py  test_ExtractBoxedSequences.py  test_FastaFile.py  test_FindBoxes.py  test_FindCDboxes.py  test_XMLFile.py  test_add-read-counts.py  test_energy-estimation.py  test_extract-boxed-sequences.py  test_filter_annotated_entries.py  test_filter_annotated_entries.xml  test_filter_by_energy.py  test_find-boxes.py  test_fix-fasta-header.py  test_functional.py
scripts/energy-estimation-utility/tests/test-data/: .gitignore  DBNFile.test_01.out.dbn  DBNFile.test_02.in.bed  ExtractBoxedSequences.test_01.in.bed  ExtractBoxedSequences.test_02.in.bed  ExtractBoxedSequences.test_02.in.fa  ExtractBoxedSequences.test_02.out.fa  ExtractBoxedSequences.test_03.in.bed  ExtractBoxedSequences.test_03.in.fa  ExtractBoxedSequences.test_03.out.2.fa  ExtractBoxedSequences.test_03.out.3.fa  FindBoxes.genome.fa  FindBoxes.test_02.bed  FindCDboxes.genome.txt  FindCDboxes.genome.txt.fai  XMLFile.test_01.in.xml  XMLFile.test_02.in.fa  XMLFile.test_02.out.fasta-fix.fa  functional.test_01.in.fa  workflow-test_cd-box_kturns.fa  workflow-test_cd-box_kturns.xml  workflow-test_f1.dbn  workflow-test_f2.dbn
share/: .astylerc  motifs.xml
share/segmentation-fold/: segments.xml
src/: .astylerc  DotBracket.cpp  GibbsFreeEnergy.cpp  Makefile.am  Nucleotide.hpp  Pairing.cpp  PairingPlus.cpp  ReadData.cpp  ReadSegments.cpp  ScoringMatrix.cpp  ScoringTree.cpp  Segment.cpp  SegmentLoop.cpp  SegmentLoopTree.cpp  SegmentTraceback.cpp  SegmentTree.cpp  SegmentTreeElement.cpp  Sequence.cpp  Settings.cpp  SubSequence.cpp  Zuker.cpp  main.cpp
src/Utils/: file_exists.cpp  min.cpp  utils.hpp
test/: CMakeLists.txt  Direction_test.cpp  DotBracket_test.cpp  GibbsFreeEnergy_test.cpp  Makefile.am  Nucleotide_test.cpp  PairingPlus_test.cpp  Pairing_test.cpp  Position_test.cpp  ReadSegments_test.cpp  ScoringMatrix_test.cpp  ScoringTree_test.cpp  SegmentLoopTree_test.cpp  SegmentLoop_test.cpp  SegmentTraceback_test.cpp  SegmentTreeElement_test.cpp  SegmentTree_test.cpp  Segment_test.cpp  Sequence_test.cpp  Settings_test.cpp  Zuker_test.cpp  Zuker_traceback_test.cpp  capture_error.cpp  main_test.cpp
